2001-06-19 16:00 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * doc/license.txt
  * doc/en/license.txt
    * This rewrite includes the compiler license, the new exception license,
      and the old exception license (and a list of all files to which the old
      one applies).

2001-06-19 17:40 UTC-0800 Ron Pinkas <ron@profit-master.com>
   ! contrib/rdd_ads/ads1.c
   ! contrib/rdd_ads/adsfunc.c
   ! contrib/rdd_ads/adsmgmnt.c
     + Added many missing type casting required for C++ compilers.

   ! contrib/rdd_ads/makefile.vc
     + Added missing -DWIN32 to CFLAGS

   /* RDDADS.lib can now be built with MSVC using the supplied contrib/rdd_ads/make_vc.bat */

2001-06-19 14:50 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * source\rtl\browdbx.prg
  * source\rtl\setcolor.c
  * source\rtl\browdb.prg
  * source\rtl\xsavescr.c
  * source\rtl\gtwin\gtwin.c
  * contrib\hbclip\hbclip.ch
    * Updated from the old Harbour Exception to the new Harbour Exception
      with permission from Paul Tucker <ptucker@sympatico.ca>

2001-06-19 14:25 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  *contrib\runjava\hbrunj.h
  *contrib\runjava\runjava.c
    * Updated from the old Harbour Exception to the new Harbour Exception
      with permission from Matteo Baccan.

2001-06-19 18:15 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/rdd/dbfntx/dbfntx1.c
     * Some fixes in movement functions

2001-06-19 14:10 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/rdd/dbcmd.c
     * OrdListAdd() fixed due to previous ntxOrderListFocus() correction

2001-06-18 22:50 UTC+1 JFL (mafact) <jfl@mafact.com>
   * harbour/source/vm/Classe.c
     * Hb_ClsScope() neutralised till after 0.37


2001-06-18 23:55 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/rdd/dbf1.c
   * source/rdd/dbfntx/dbfntx1.c
     ! Fixed bugs with record appending, reported by John M. S. Chiang
     ! ntxOrderListFocus() corrected


2001-06-18 14:35 UTC-0400 David G. Holm <dholm@jsd-llc.com>
