@@ -1,3 +1,12 @@
+2001-06-19 23:39 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>
+
+   * source/lang/msgro.c
+   * source/lang/msg_tpl.c
+   * doc/license.txt
+   * doc/en/license.txt
+     * Changed two old licences of mine to the new one.
+       Actually msg_tpl is not "mine", it's only a template.
+
 2001-06-19 16:00 UTC-0400 David G. Holm <dholm@jsd-llc.com>
 
   * doc/license.txt
